--- a/haskell-clusters-gtk.cabal
+++ b/haskell-clusters-gtk.cabal
@@ -16,8 +16,14 @@ executable haskell-clusters-gtk
   main-is:             Main.hs
   ghc-options:         -Wall
   build-depends:       base
+                     , cairo
+                     , Chart
+                     , Chart-cairo
+                     , colour
                      , containers
+                     , data-default-class
                      , gtk
+                     , lens
   default-language:    Haskell2010
 
 source-repository head
