--- a/haskell-clusters-gtk.cabal
+++ b/haskell-clusters-gtk.cabal
@@ -12,8 +12,9 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable haskell-clusters-gtk
---  hs-source-dirs:      app
   main-is:             Main.hs
+  other-modules:       Cluster
+                       Perceptron
   ghc-options:         -Wall
   build-depends:       base
                      , cairo
